@@ -12,7 +12,7 @@
 # AC_INIT(../generic/tcl.h)
 #--------------------------------------------------------------------
 
-AC_INIT(vfs.c)
+AC_INIT(generic/vfs.c)
 
 #AC_CONFIG_AUX_DIR(config)
 #CONFIGDIR=${srcdir}/config
